--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-nav {
-    height: 30%;
-    background: #83C5BE;
+#h1-header {
+    margin: 0;
+    text-align: left;
 }
+
+.navbar {
+    width: 100%;
+    height: 120px;
+    margin-bottom: 15px;
+    background-color: #ccc;
+}
+
+
+/* MEDIA QUERIES */
+
