--- a/main_page/style.css
+++ b/main_page/style.css
@@ -3,6 +3,7 @@ F1DFDF light pink
 C28F9E medium pink
 926270 dark pink
 FFDCE2 pink??
+2b2d6 pretty lilac
 */
 
 body {
@@ -29,7 +30,7 @@ h2 {
 ul {
     border-bottom: 1px solid #C28F9E;
     text-align: left;
-    margin: 10px;
+    margin: 20px;
     padding: 0px;
     color: #C28F9E;
 
@@ -41,7 +42,7 @@ ul {
 
 hr.solid {
     margin: 0px;
-    border-top: 45px solid #F1DFDF;
+    border-top: 45px solid #d2b2d6;
 }
 
 #manga {
@@ -67,5 +68,17 @@ hr.solid {
 #pookie {
     width: 50%;
     margin: 25px;
+}
+
+#song {
+    margin: 30px;
+    color: #C28F9E;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.5em;
+
+}
+
+#reflections {
+    margin-top: 20px;
 }
 
